# nexos

./: .editorconfig  Cargo.toml  README.md  References.md  build.rs  flake.nix  rust-toolchain.toml
.cargo/: config.toml  create-image.sh  runner-aarch64.sh  runner-x86_64.sh
.devcontainer/: Dockerfile  devcontainer.json
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link  flake-profile-4-link
.github/workflows/: run-tests.yml
conf/: limine.cfg  limine.conf  linker-aarch64.ld  linker-x86_64.ld
crates/test_macros/: Cargo.toml
crates/test_macros/src/: lib.rs
src/: arch.rs  bitmap_allocator.rs  core.rs  global_allocator.rs  heap.rs  interrupts.rs  io.rs  kernel.rs  limine.rs  main.rs  multicore.rs  panic.rs  print.rs  test_runner.rs
src/arch/: x86_64.rs
src/arch/aarch64/: interrupts.rs
src/arch/x86_64/: apic.rs  idt.rs  paging.rs  pic.rs  ports.rs  serial.rs
src/core/: local.rs
src/kernel/: global_allocator.rs  heap.rs  logger.rs  memory_map.rs
