[workspace]
members = ["crates/*"]

[package]
name = "nexos"
version = "0.1.0"
edition = "2021"
authors = ["Tiago Dinis <tiagodinis33@proton.me>"]

[dependencies]
spin = "0.9.4"
limine = "0.3.0"
bitflags = "2.4.1"
[dev-dependencies]
test_macros = { path = "crates/test_macros" }
# backtrace = { version = "0.3.66", default-features = false }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[target.x86_64-unknown-none.dependencies]
x86_64 = "0.15.1"
[features]
default = ["qemu-exit"]
qemu-exit = []
