[workspace]
members = ["crates/*"]

[package]
name = "nexos"
version = "0.1.0"
edition = "2021"
authors = ["Tiago Dinis <tiagodinis33@proton.me>"]

[dependencies]
spin = "0.9.4"
limine = "0.3.0"
bitflags = "2.4.1"
# gimli = { version = "0.31.0", default-features = false, features = ["read"] }
# addr2line = { version = "0.24.1", default-features = false, features = ["rustc-demangle"] }
# object = { version = "0.36.4", default-features = false, features = ["read"] }
[dev-dependencies]
test_macros = { path = "crates/test_macros" }
# backtrace = { version = "0.3.66", default-features = false }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"
strip = false
lto = false
[target.x86_64-unknown-none.dependencies]
raw-cpuid = "11.1.0"
x2apic = "0.4.3"
x86_64 = "0.15.1"
[features]
default = ["qemu-exit"]
qemu-exit = []
