[package]
name = "test_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = { version = "0.20.10", features = ["diagnostics"] }
quote = "1.0.33"
syn = {version = "2.0.39", features = ["full"]}
